[package]
name = "raspberry_pi_heat_control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "1", features = ["full"] }
scraper = "0.12.0"
serde_json = "*"
serde = {version = "*", features = ["derive"]}
# mongodb = "*"
env = "*"
chrono = "*"
nokhwa = {version = "^0.9.3", features=["default", "input-v4l"]}
image = "*"

[[bin]]
name = "raspberry_pi_heat_control"
path = "./src/main.rs"
